# ttsim

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGES.md  CLAUDE.md  MettsimExperiments.ipynb  README.md  codecov.yml  conftest.py  debug_test_script_irrelevant_input.py  debug_test_script_no_input.py  debug_test_script_relevant_input.py  gettsim_example.py  inputs.yaml  interface-playground.ipynb  interface-prototype.ipynb  oss_example.py  pyproject.toml  typical_vars_in_data.yaml  validate-params-manually.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  question.md
.github/workflows/: main.yaml  main.yml  publish-to-pypi.yaml  publish-to-pypi.yml
docs/: conf.py  geps.md  index.md  rtd_environment.yml
docs/geps/: gep-01.md  gep-02.md  gep-03.md  gep-04.md  gep-05.md  gep-06.md  gep-07.md  gep_07_example.py
docs/gettsim_developer/: hh_concepts.md
docs/gettsim_objects/: functions.md  index.md  input_variables.md  interface.md  means_testing.md  params.md  variables_out.md
docs/how_to_guides/: calculating_elterngeld.ipynb  index.md
docs/tutorials/: advanced_usage.ipynb  basic_usage.ipynb  debugging.ipynb  index.md  policy_functions.ipynb
mettsim/: pyproject.toml
mettsim/middle_earth/housing_benefits/: amount.py  max_amount.yaml
mettsim/middle_earth/payroll_tax/: amount.py
mettsim/middle_earth/payroll_tax/child_tax_credit/: inputs.py
mettsim/middle_earth/payroll_tax/income/: deductions.py
mettsim/middle_earth/wealth_tax/: tax_schedule.yaml  wealth_tax.py
mettsim/tests_middle_earth/: test_mettsim.py
mettsim/tests_middle_earth/policy_cases/property_tax/2000-01-01/: acre_size_capped_via_evaluation_year.yaml
mettsim/tests_middle_earth/policy_cases/wealth_tax/2000-01-01/: above_individual_threshold.yaml  above_kin_threshold.yaml  below_both_thresholds.yaml
outdated_docs/how-to-guides/: calculating_elterngeld.ipynb  different_ways_to_load_policy_functions.ipynb  visualizing_the_system.ipynb
outdated_docs/tutorials/: advanced_usage.ipynb  debugging.ipynb  parameters.ipynb  policy_functions.ipynb
sandbox/: check-autocomplete.ipynb  interface-playground.ipynb  plots.ipynb
src/_gettsim/: aggregation.py  combine_functions.py  combine_functions_in_tree.py  config.py  gettsim_typing.py  hh_characteristics.py  household_characteristics.py  ids.py  individual_characteristics.py  inputs.py  interface.py  loader.py  param_types.py  policy_environment.py  shared.py  synthetic.py  time_conversion.py  typing.py  visualization.py
src/_gettsim_tests/: __init__.py  _helpers.py  _policy_test_utils.py  conftest.py  test_aggregate_by_p_id.py  test_arbeitslosengeld.py  test_arbeitslosengeld_2.py  test_combine_functions.py  test_combine_functions_in_tree.py  test_demographics.py  test_docs.py  test_einkommensteuer.py  test_elterngeld.py  test_erwerbsminderungsrente.py  test_erziehungsgeld.py  test_full_taxes_and_transfers.py  test_ges_rente_hinzuverdienst.py  test_groupings.py  test_grundrente.py  test_grundrente_proxy_rente.py  test_grundsicherung_im_alter.py  test_günstigerprüfungen.py  test_household_links.py  test_import_version.py  test_interface.py  test_jittability.py  test_kindergeld.py  test_kinderzuschlag.py  test_loader.py  test_lohnsteuer.py  test_minijobgrenze.py  test_namespaces.py  test_plot.py  test_plot_dag.py  test_policy.py  test_policy_environment.py  test_rente_altersgrenzen.py  test_rente_anspruch.py  test_rounding.py  test_shared.py  (+15 more)
src/gettsim/: __init__.py
src/ttsim/: __init__.py  aggregation.py  aggregation_jax.py  aggregation_numpy.py  automatically_added_functions.py  column_objects_param_function.py  combine_functions.py  combined_environment.py  compute_taxes_and_transfers.py  config.py  convert_nested_data.py  copy_environment.py  create_data_tree.py  data_converters.py  entry_point.py  fail_if.py  failures_and_warnings.py  function_types.py  input_data.py  interface.py  interface_dag.py  loader.py  main.py  main_args.py  main_target.py  names.py  orig_policy_objects.py  param_objects.py  params-schema.json  piecewise_functions.py  piecewise_polynomial.py  plot_dag.py  policy_environment.py  prepare_data.py  processed_data.py  raw_results.py  results.py  rounding.py  (+12 more)
src_mettsim/: pyproject.toml
src_mettsim/mettsim/: README.md
src_mettsim/mettsim/middle_earth/: __init__.py  demographics.py  group_by_ids.py
src_mettsim/mettsim/middle_earth/housing_benefits/: assistance_rate.yaml
src_mettsim/mettsim/middle_earth/housing_benefits/eligibility/: eligibility.yaml
src_mettsim/mettsim/middle_earth/housing_benefits/income/: income.py
src_mettsim/mettsim/middle_earth/orc_hunting_bounty/: orc_hunting_bounty.py  orc_hunting_bounty.yaml
src_mettsim/mettsim/middle_earth/payroll_tax/: amount.py  payroll_tax.yaml
src_mettsim/mettsim/middle_earth/payroll_tax/child_tax_credit/: annotation_bug_reproducer.py
src_mettsim/mettsim/middle_earth/payroll_tax/income/: amount.py  inputs.py
src_mettsim/mettsim/middle_earth/property_tax/: acre_size_cap.yaml  amount.py  tax_schedule.yaml
src_mettsim/mettsim/middle_earth/wealth_tax/: __init__.py
src_mettsim/tests_middle_earth/: test_mettsim.py
src_mettsim/tests_middle_earth/policy_cases/housing_benefits/2000-01-01/: amount_no_children_high_income.yaml  amount_no_children_low_income.yaml  amount_with_children_high_income.yaml
src_mettsim/tests_middle_earth/policy_cases/housing_benefits/2025-01-01/: amount_no_children_low_income.yaml  amount_with_children_low_income.yaml  amount_with_many_children.yaml
src_mettsim/tests_middle_earth/policy_cases/payroll_tax/2025-01-01/: amount_no_children_noble_parents.yaml  amount_with_children.yaml  amount_with_children_inputs_need_to_be_converted.yaml  amount_with_many_children.yaml  annotation_bug_reproducer.yaml
src_mettsim/tests_middle_earth/policy_cases/wealth_tax/2000-01-01/: above_family_threshold.yaml
tests/: test_copy_environment.py  test_end_to_end.py  test_import_version.py  test_input_node_paths.py  test_interface_dag.py  test_main.py  test_plot_dag.py  test_unit_converters.py
(+3449 files in other folders)
