[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "ttsim-backend"
description = "code powering Taxes and Transfers SIMulators"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
  "Benefits",
  "Economics",
  "Pensions",
  "Taxes",
  "Transfers",
]
license = { file = "LICENSE" }
maintainers = [
  { name = "Hans-Martin von Gaudecker", email = "hmgaudecker@uni-bonn.de" },
  { name = "Marvin Immesberger" },
]
authors = [
  { name = "Hans-Martin von Gaudecker", email = "hmgaudecker@uni-bonn.de" },
  { name = "Marvin Immesberger" },
]
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "dags>=0.4.2",
  "ipywidgets",
  "networkx>=3.5",
  "numpy",
  "numpy-groupies",
  "openpyxl",
  "optree>=0.16",
  "pandas",
  "plotly>=6.2",
  "pygments",
  "pygraphviz",
  "pytest",
  "pyyaml",
]
urls.Changelog = "https://github.com/ttsim-dev/ttsim/CHANGES.md"
urls.Documentation = "https://gettsim.readthedocs.io"
urls.Github = "https://github.com/ttsim-dev/ttsim"
urls.Repository = "https://github.com/ttsim-dev/ttsim"
urls.Tracker = "https://github.com/ttsim-dev/ttsim/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/ttsim/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
target-version = "py311"
fix = true
unsafe-fixes = false
lint.select = [ "ALL" ]
lint.extend-ignore = [
  "COM812",  # Conflicts with ruff-format
  "D",       # Docstrings
  "EM101",   # Exception must not use a string literal
  "EM102",   # Exception must not use an f-string literal
  "F722",    # Forward annotation syntax error (jaxtyping)
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "FIX002",  # Line contains TODO
  "ICN001",  # numpy should be np (different convention here)
  "ISC001",  # Conflicts with ruff-format
  "N999",    # Invalid module name
  "PLC2401", # Variable name contains non-ASCII character
  "PLC2403", # Module alias contains non-ASCII character
  "PLR0913", # Too many arguments in function definition
  "PLR5501", # elif not supported by vectorization converter for JAX
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
  "TRY003",  # Long messages outside exception class
]
lint.per-file-ignores."conftest.py" = [
  "ANN", # Type annotations
]
lint.per-file-ignores."src/ttsim/__init__.py" = [
  "PLW0127", # Re-export things for tab-completion explicitly
]
lint.per-file-ignores."src/ttsim/interface_dag_elements/fail_if.py" = [
  "E501", # Line too long
]
lint.per-file-ignores."src/ttsim/interface_dag_elements/specialized_environment.py" = [
  "E501", # Line too long
]
lint.per-file-ignores."src/ttsim/main_args.py" = [
  "F811", # Redefinition of unused name
]
lint.per-file-ignores."src/ttsim/plot/dag/*.py" = [
  "B006",    # Mutable argument default
  "C901",    # Function too complex
  "PLR0912", # Too many branches
  "PLR0915", # Too many statements
]
lint.per-file-ignores."src/ttsim/typing.py" = [
  "PYI051", # Redundant literal union
]
lint.per-file-ignores."src_mettsim/mettsim/middle_earth/**/*.py" = [
  "E721",    # Type comparison
  "PLR1714", # Repeated equality comparison
  "PLR1716", # Contains duplicate comparison
  "PLR2004", # Magic value in comparison
  "RET",     # Return rules
  "SIM108",  # Use ternary operator
]
lint.per-file-ignores."src_mettsim/tests_middle_earth/*.py" = [
  "ANN",     # Type annotations
  "INP001",  # Implicit namespace package
  "PLR2004", # Magic value in comparison
  "S101",    # Use of assert
]
lint.per-file-ignores."tests/**/*.py" = [
  "ANN",     # Type annotations
  "INP001",  # Implicit namespace package
  "PLR2004", # Magic value in comparison
  "S101",    # Use of assert
]
lint.per-file-ignores."tests/interface_dag_elements/test_failures.py" = [
  "E501", # Line too long
]
lint.per-file-ignores."tests/tt/test_vectorization.py" = [
  "E721",    # Type comparison
  "PLR1714", # Repeated equality comparison
  "PLR1716", # Contains duplicate comparison
  "RET",     # Return rules
  "SIM108",  # Use ternary operator
]
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.addopts = [ "--pdbcls=pdbp:Pdb" ]
ini_options.filterwarnings = [
  "ignore:.*XMLParser*:DeprecationWarning",
  "ignore:.*'tree.iter()'*:PendingDeprecationWarning",
  "ignore:.*Sorting*:FutureWarning",
  "ignore:The TerminalReporter.writer attribute is",
  "ignore:Repeated execution of the test suite",
  "ignore:Using or importing the ABCs from 'collections'",
  "ignore:Explicitly requested dtype .*64 requested in zeros_like",
]
ini_options.markers = [
  "skipif_jax: skip test if backend is jax",
  "skipif_numpy: skip test if backend is numpy",
]
ini_options.norecursedirs = [ "docs" ]
ini_options.testpaths = [ "tests", "src_mettsim/tests_middle_earth" ]

[tool.ty]
analysis.allowed-unresolved-imports = [ "ttsim._version", "jax", "jax.numpy", "jax.ops" ]
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.empty-body = "ignore"  # raised for all functions decorated with @policy_input
rules.ignore-comment-unknown-rule = "error"
rules.invalid-argument-type = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-return-type = "ignore"
rules.possibly-missing-attribute = "error"
rules.possibly-missing-implicit-call = "error"
rules.possibly-missing-import = "error"
rules.possibly-unresolved-reference = "error"
rules.redundant-cast = "error"
rules.undefined-reveal = "error"
rules.unresolved-global = "error"
rules.unsupported-base = "error"
rules.unused-ignore-comment = "error"
rules.useless-overload-body = "error"

[tool.yamlfix]
line_length = 88
none_representation = "null"
sequence_style = "block_style"

[tool.pixi]
dependencies.ipywidgets = "*"
dependencies.jupyterlab = "*"
dependencies.numpy_groupies = "*"
dependencies.numpydoc = "*"
dependencies.openpyxl = "*"
dependencies.pandas = ">=2.3"
dependencies.prek = "*"
dependencies.pygments = "*"
dependencies.pygraphviz = "*"
dependencies.pyyaml = "*"
dependencies.snakeviz = ">=2.2.2"
dependencies.tabulate = "*"
dependencies.toml = "*"
environments.py311 = [ "py311", "tests" ]
environments.py312 = [ "py312", "tests" ]
environments.py313 = [ "py313", "tests" ]
environments.py314 = [ "py314", "tests" ]
environments.py314-cuda = [ "py314", "tests", "cuda" ]
environments.py314-jax = [ "py314", "tests", "jax" ]
environments.py314-metal = [ "py314", "tests", "metal" ]
feature.cuda.platforms = [ "linux-64" ]
feature.cuda.system-requirements = { cuda = "13" }
feature.cuda.target.linux-64.pypi-dependencies.jax = { version = ">=0.8", extras = [ "cuda13" ] }
feature.cuda.target.linux-64.tasks.tests-jax = "pytest --backend=jax"
feature.jax.platforms = [ "linux-64", "osx-arm64", "win-64" ]
feature.jax.pypi-dependencies.jax = ">=0.8"
feature.jax.target.linux-64.tasks.tests-jax = "pytest --backend=jax"
feature.jax.target.osx-arm64.tasks.tests-jax = "dot -c && pytest --backend=jax"
feature.jax.target.win-64.tasks.tests-jax = "pytest --backend=jax"
feature.metal.platforms = [ "osx-arm64" ]
feature.metal.target.osx-arm64.pypi-dependencies.jax = ">=0.8"
feature.metal.target.osx-arm64.pypi-dependencies.jax-metal = ">=0.1.1"
feature.py311.dependencies.python = "~=3.11.0"
feature.py312.dependencies.python = "~=3.12.0"
feature.py313.dependencies.python = "~=3.13.0"
feature.py314.dependencies.python = "~=3.14.0"
feature.tests.pypi-dependencies.ty = "*"
feature.tests.pypi-dependencies.types-PyYAML = "*"
feature.tests.pypi-dependencies.types-pytz = "*"
feature.tests.pypi-dependencies.pytest-cov = "*"
feature.tests.pypi-dependencies.pytest-xdist = "*"
feature.tests.target.linux-64.tasks.tests = "pytest"
feature.tests.target.linux-64.tasks.ty = "ty check"
feature.tests.target.osx-64.tasks.tests = "dot -c && pytest"  # dot -c needed for pygraphviz on macOS
feature.tests.target.osx-64.tasks.ty = "ty check"
feature.tests.target.osx-arm64.tasks.tests = "dot -c && pytest"  # dot -c needed for pygraphviz on macOS
feature.tests.target.osx-arm64.tasks.ty = "ty check"
feature.tests.target.win-64.tasks.tests = "pytest"
feature.tests.target.win-64.tasks.ty = "ty check"
# jax-datetime = { git = "https://github.com/google/jax-datetime.git" }
pypi-dependencies.jaxtyping = ">=0.3.2"
pypi-dependencies.kaleido = ">=1.0.0"
pypi-dependencies.mettsim = { path = "src_mettsim", editable = true }
pypi-dependencies.pdbp = ">=1.7.1"
pypi-dependencies.ttsim-backend = { path = ".", editable = true }
workspace.channels = [ "conda-forge" ]
workspace.platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]
