[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "ttsim-backend"
description = "code powering Taxes and Transfers SIMulators"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
  "Benefits",
  "Economics",
  "Pensions",
  "Taxes",
  "Transfers",
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "dags>=0.5.1",
  "ipywidgets",
  "kaleido>=1.1",
  "networkx>=3.5",
  "numpy",
  "numpy-groupies",
  "openpyxl",
  "optree>=0.16",
  "pandas>=3",
  "plotly>=6.5",
  "portion",
  "pygments",
  "pygraphviz",
  "pytest",
  "pyyaml",
]
[[project.authors]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[[project.authors]]
name = "Marvin Immesberger"
[[project.maintainers]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[[project.maintainers]]
name = "Marvin Immesberger"
[project.urls]
Changelog = "https://github.com/ttsim-dev/ttsim/CHANGES.md"
Documentation = "https://gettsim.readthedocs.io"
Github = "https://github.com/ttsim-dev/ttsim"
Repository = "https://github.com/ttsim-dev/ttsim"
Tracker = "https://github.com/ttsim-dev/ttsim/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/ttsim/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812",  # Conflicts with ruff-format
  "EM101",   # Exception must not use a string literal
  "EM102",   # Exception must not use an f-string literal
  "FIX002",  # Line contains TODO
  "ISC001",  # Conflicts with ruff-format
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
  "TRY003",  # Long messages outside exception class
  "D",       # Pydocstyle
  "F722",    # Forward annotation syntax error (jaxtyping)
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default value positional argument
  "ICN001",  # Unconventional import alias
  "N999",    # Invalid module name
  "PLC2401", # Non-ASCII variable name (German policy names)
  "PLC2403", # Non-ASCII import name (German policy names)
  "PLR0913", # Too many arguments
  "PLR5501", # Collapsible else-if
  "UP040",   # Non-PEP 695 type alias (can't use inside TYPE_CHECKING)
  "UP046",   # Non-PEP 695 generic class (needs careful migration)
  "UP047",   # Non-PEP 695 generic function (needs careful migration)
]
per-file-ignores."conftest.py" = [
  "ANN", # Missing type annotations
]
per-file-ignores."src/ttsim/__init__.py" = [
  "PLW0127", # Self-assigning variable
]
per-file-ignores."src/ttsim/interface_dag_elements/fail_if.py" = [
  "E501", # Line too long
]
per-file-ignores."src/ttsim/interface_dag_elements/specialized_environment.py" = [
  "E501", # Line too long
]
per-file-ignores."src/ttsim/main_args.py" = [
  "F811", # Redefined while unused
]
per-file-ignores."src/ttsim/plot/dag/*.py" = [
  "B006",    # Mutable argument default
  "C901",    # Too complex
  "PLR0912", # Too many branches
  "PLR0915", # Too many statements
]
per-file-ignores."src/ttsim/typing.py" = [
  "PYI051", # Redundant literal union
]
per-file-ignores."src_mettsim/mettsim/middle_earth/**/*.py" = [
  "E721",    # Type comparison using ==
  "PLR1714", # Repeated equality comparison
  "PLR1716", # Boolean chained comparison
  "PLR2004", # Magic value comparison
  "RET",     # Unnecessary return logic
  "SIM108",  # Use ternary operator
]
per-file-ignores."src_mettsim/tests_middle_earth/*.py" = [
  "ANN",     # Missing type annotations
  "INP001",  # Missing __init__.py
  "PLR2004", # Magic value comparison
  "S101",    # Use of assert
]
per-file-ignores."tests/*" = [
  "INP001", # Missing __init__.py
  "S101",   # Use of assert
]
per-file-ignores."tests/**/*.py" = [
  "ANN",     # Missing type annotations
  "INP001",  # Missing __init__.py
  "PLR2004", # Magic value comparison
  "S101",    # Use of assert
]
per-file-ignores."tests/interface_dag_elements/test_failures.py" = [
  "E501", # Line too long
]
per-file-ignores."tests/tt/test_vectorization.py" = [
  "E721",    # Type comparison using ==
  "PLR1714", # Repeated equality comparison
  "PLR1716", # Boolean chained comparison
  "RET",     # Unnecessary return logic
  "SIM108",  # Use ternary operator
]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch", "tool.pytest", "tool.pytask", "tool.ty" ]
expand_tables = [
  "tool.pixi.dependencies",
  "tool.pixi.environments",
  "tool.pixi.feature",
  "tool.pixi.feature.cuda",
  "tool.pixi.feature.cuda.system-requirements",
  "tool.pixi.feature.cuda.target",
  "tool.pixi.feature.jax",
  "tool.pixi.feature.jax.pypi-dependencies",
  "tool.pixi.feature.jax.target",
  "tool.pixi.feature.metal",
  "tool.pixi.feature.metal.target",
  "tool.pixi.feature.py311",
  "tool.pixi.feature.py311.dependencies",
  "tool.pixi.feature.py312",
  "tool.pixi.feature.py312.dependencies",
  "tool.pixi.feature.py313",
  "tool.pixi.feature.py313.dependencies",
  "tool.pixi.feature.py314",
  "tool.pixi.feature.py314.dependencies",
  "tool.pixi.feature.tests",
  "tool.pixi.feature.tests.pypi-dependencies",
  "tool.pixi.feature.tests.target",
  "tool.pixi.feature.type-checking",
  "tool.pixi.feature.type-checking.pypi-dependencies",
  "tool.pixi.feature.type-checking.tasks",
  "tool.pixi.feature.type-checking-jax",
  "tool.pixi.feature.type-checking-jax.pypi-dependencies",
  "tool.pixi.feature.type-checking-jax.tasks",
  "tool.pixi.pypi-dependencies",
  "tool.pixi.pypi-dependencies.mettsim",
  "tool.pixi.pypi-dependencies.ttsim-backend",
  "tool.pixi.workspace",
]

[tool.ty]
analysis.allowed-unresolved-imports = [
  "ttsim._version",
  "jax",
  "jax.numpy",
  "jax.ops",
]
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.empty-body = "ignore"
rules.ignore-comment-unknown-rule = "error"
rules.ineffective-final = "error"
rules.invalid-enum-member-annotation = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-legacy-positional-parameter = "error"
rules.invalid-return-type = "ignore"
rules.invalid-type-form = "ignore"
rules.possibly-missing-submodule = "error"
rules.redundant-cast = "error"
rules.unused-awaitable = "error"
rules.unused-ignore-comment = "error"

[tool.pytest]
ini_options.addopts = [ "--pdbcls=pdbp:Pdb" ]
ini_options.filterwarnings = [
  "ignore:.*XMLParser*:DeprecationWarning",
  "ignore:.*'tree.iter()'*:PendingDeprecationWarning",
  "ignore:.*Sorting*:FutureWarning",
  "ignore:The TerminalReporter.writer attribute is",
  "ignore:Repeated execution of the test suite",
  "ignore:Using or importing the ABCs from 'collections'",
  "ignore:Explicitly requested dtype .*64 requested in zeros_like",
]
ini_options.markers = [
  "skipif_jax: skip test if backend is jax",
  "skipif_numpy: skip test if backend is numpy",
]
ini_options.norecursedirs = [ "docs" ]
ini_options.testpaths = [ "tests", "src_mettsim/tests_middle_earth" ]

[tool.yamlfix]
line_length = 88
none_representation = "null"
sequence_style = "block_style"

[tool.pixi]
[tool.pixi.dependencies]
ipywidgets = "*"
jupyterlab = "*"
numpy_groupies = "*"
numpydoc = "*"
openpyxl = "*"
pandas = ">=3"
portion = "*"
prek = "*"
pygments = "*"
pygraphviz = "*"
pyyaml = "*"
snakeviz = ">=2.2.2"
tabulate = "*"
toml = "*"
[tool.pixi.environments]
py311 = [ "py311", "tests" ]
py312 = [ "py312", "tests" ]
py313 = [ "py313", "tests" ]
py314 = [ "py314", "tests" ]
py314-cuda = [ "py314", "tests", "cuda" ]
py314-jax = [ "py314", "tests", "jax" ]
type-checking = [ "py314", "type-checking" ]
type-checking-jax = [ "py314", "type-checking-jax", "jax" ]
py314-metal = [ "py314", "tests", "metal" ]
[tool.pixi.feature]
cuda.platforms = [ "linux-64" ]
cuda.system-requirements = { cuda = "13" }
cuda.target.linux-64.pypi-dependencies.jax = { version = ">=0.8", extras = [ "cuda13" ] }
cuda.target.linux-64.tasks.tests-jax = "pytest --backend=jax"
jax.platforms = [ "linux-64", "osx-arm64", "win-64" ]
jax.pypi-dependencies.jax = ">=0.8"
jax.target.linux-64.tasks.tests-jax = "pytest --backend=jax"
jax.target.osx-arm64.tasks.tests-jax = "dot -c && pytest --backend=jax"
jax.target.win-64.tasks.tests-jax = "pytest --backend=jax"
metal.platforms = [ "osx-arm64" ]
metal.target.osx-arm64.pypi-dependencies.jax = ">=0.8"
metal.target.osx-arm64.pypi-dependencies.jax-metal = ">=0.1.1"
py311.dependencies.python = "~=3.11.0"
py312.dependencies.python = "~=3.12.0"
py313.dependencies.python = "~=3.13.0"
py314.dependencies.python = "~=3.14.0"
tests.pypi-dependencies.types-PyYAML = "*"
tests.pypi-dependencies.types-pytz = "*"
tests.pypi-dependencies.pytest-cov = "*"
tests.pypi-dependencies.pytest-xdist = "*"
tests.target.linux-64.tasks.tests = "pytest"
tests.target.linux-64.tasks.tests-with-cov = "pytest --cov-report=xml --cov=./"
tests.target.osx-64.tasks.tests = "dot -c && pytest"  # needed for pygraphviz on macOS
tests.target.osx-64.tasks.tests-with-cov = "dot -c && pytest --cov-report=xml --cov=./"  # needed for pygraphviz on macOS
tests.target.osx-arm64.tasks.tests = "dot -c && pytest"  # needed for pygraphviz on macOS
tests.target.osx-arm64.tasks.tests-with-cov = "dot -c && pytest --cov-report=xml --cov=./"  # needed for pygraphviz on macOS
tests.target.win-64.tasks.tests = "pytest"
tests.target.win-64.tasks.tests-with-cov = "pytest --cov-report=xml --cov=./"
type-checking.pypi-dependencies.ty = "*"
type-checking.pypi-dependencies.types-PyYAML = "*"
type-checking.pypi-dependencies.types-pytz = "*"
type-checking.tasks.ty = "ty check"
type-checking-jax.pypi-dependencies.ty = "*"
type-checking-jax.pypi-dependencies.types-PyYAML = "*"
type-checking-jax.pypi-dependencies.types-pytz = "*"
type-checking-jax.tasks.ty-jax = "ty check"
[tool.pixi.pypi-dependencies]
# jax-datetime = { git = "https://github.com/google/jax-datetime.git" }
jaxtyping = "*"
mettsim = { path = "src_mettsim", editable = true }
pdbp = "*"
ttsim-backend = { path = ".", editable = true }
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]
