[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "mettsim"
version = "0.0.0"
description = "The Middle Earth Taxes and Transfers SIMulator"
readme = { file = "mettsim/README.md", content-type = "text/markdown" }
keywords = [
  "Benefits",
  "Pensions",
  "Taxes",
  "Testing",
  "Transfers",
]
license = { file = "mettsim/LICENSE" }
maintainers = [
  { name = "Hans-Martin von Gaudecker", email = "hmgaudecker@uni-bonn.de" },
  { name = "Marvin Immesberger" },
]
authors = [
  { name = "Hans-Martin von Gaudecker", email = "hmgaudecker@uni-bonn.de" },
  { name = "Marvin Immesberger" },
]
requires-python = ">=3.11"

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
urls.Changelog = "https://gettsim.readthedocs.io/en/stable/changes.html"
urls.Documentation = "https://gettsim.readthedocs.io"
urls.Github = "https://github.com/ttsim-dev/ttsim"
urls.Repository = "https://github.com/ttsim-dev/ttsim"
urls.Tracker = "https://github.com/ttsim-dev/ttsim/issues"

[tool.hatch.build.targets.sdist]
exclude = [ "tests_middle_earth" ]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = [ "." ]
sources = [ "." ]

[tool.hatch.metadata]
allow-direct-references = true
